# obbystreams

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  app.py  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
docs/: _config.yml  api.md  changelog.md  configuration.md  frontend.md  index.md  installation.md  operations.md  release.md  robots.txt  security.md  troubleshooting.md
docs/releases/: v0.2.0.md  v0.2.1.md
examples/: obbystreams.example.yaml
frontend/: index.html
frontend/public/: robots.txt  site.webmanifest
frontend/src/: App.tsx  api.ts  format.ts  main.tsx  styles.css  types.ts
nginx/: s.obby.ca
static/: app.js  index.html  sitemap.xml  styles.css
static/assets/: index-DR8tV9Lr.css  index-xWuBldqh.js
systemd/: obbystreams.service
tests/: test_stability_helpers.py
tools/: bootstrap_arango.py
